Added todo.sh to bin and added todo aliases

--- a/todo.txt/todo.cfg
+++ b/todo.txt/todo.cfg
@@ -1,7 +1,7 @@
 # === EDIT FILE LOCATIONS BELOW ===
 
 # Your todo.txt directory
-#export TODO_DIR="/Users/gina/Documents/todo"
+#export TODO_DIR="$DOT/todo"
 export TODO_DIR=`dirname "$0"`
 
 # Your todo/done/report.txt locations
